Generalized oauth2 support
- Added helper end points for creating and refreshing access tokens, now also for the password grant.
- Bugfixes
