# resources/swagger/oauth2-swagger.yml
@@ -1,20 +1,20 @@
 swagger: "2.0"
 info:
   version: "1.0"
-  title: "Kong Adapter OAuth 2.0 Implicit Flow Registration API"
+  title: "Kong Adapter OAuth 2.0 Helper API"
 basePath: "/oauth2"
 consumes:
   - application/json
 schemes:
   - http
 paths:
-  /register:
+  /token/implicit:
     post:
       parameters:
-        - name: user
+        - name: body
           in: body
           schema:
-            $ref: '#/definitions/implicitRegistrationType'
+            $ref: '#/definitions/implicitTokenType'
       responses:
         200:
           description: Successful response
@@ -25,12 +25,62 @@ paths:
         404:
           description: Not found
 
+  /token/password:
+    post:
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/passwordTokenType'
+      responses:
+        200:
+          description: Successful response
+          schema:
+            $ref: '#/definitions/accessTokenType'
+        401:
+          description: Unauthorized
+        404:
+          description: Not found
+
+  /token/refresh:
+    post:
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: '#/definitions/refreshTokenType'
+      responses:
+        200:
+          description: Successful response
+          schema:
+            $ref: '#/definitions/accessTokenType'
+        400:
+          description: Bad request
+        404:
+          description: Not found
+
+  /token:
+    get:
+      parameters:
+        - name: access_token
+          in: query
+          type: string
+          description: Pass in either `access_token` or `refresh_token` to retrieve token data
+        - name: refresh_token
+          in: query
+          type: string
+          description: Pass in either `access_token` or `refresh_token` to retrieve token data
+      responses:
+        200:
+          description: Successful response
+          schema:
+            $ref: '#/definitions/accessTokenType'
+        404:
+          description: Not found
 definitions:
-  implicitRegistrationType:
+  implicitTokenType:
     type: object
     properties:
-#      email:
-#        type: string
       authenticated_userid:
         type: string
       api_id:
@@ -41,14 +91,42 @@ definitions:
         type: array
         items:
           type: string
-#      headers:
-#        type: array
-#        items:
-#          type: object
-#          additionalProperties:
-#            type: string
   implicitSuccessType:
     type: object
     properties:
       redirect_uri:
+        type: string
+
+  passwordTokenType:
+    type: object
+    properties:
+      authenticated_userid:
+        type: string
+      api_id:
+        type: string
+      client_id:
+        type: string
+      scope:
+        type: array
+        items:
+          type: string
+  
+  accessTokenType:
+    type: object
+    properties:
+      access_token:
+        type: string
+      token_type:
+        type: string
+      refresh_token:
+        type: string
+      expires_in:
+        type: number
+
+  refreshTokenType:
+    type: object
+    properties:
+      refresh_token:
+        type: string
+      client_id:
         type: string
